--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -5,3 +5,78 @@
     margin: 30px auto;
     height: 80vh;
 }
+
+.container-top
+{
+    width: 80%;
+    height: 114px;
+    margin: 22px auto;
+
+
+    background: #D9D9D9;
+    border-radius: 10px;
+}
+
+.container-mid
+{
+    width: 80%;
+    margin: 0px auto;
+}
+
+.container-mid-left
+{
+    width: 569px;
+    margin-top: 60px;
+    display: inline-block;
+
+}
+
+.container-mid-child1
+{
+    width: 100%;
+    height: 226px;
+    margin: 0px auto;
+    margin-bottom: 60px;
+
+    background: #D9D9D9;
+    border-radius: 10px;
+}
+
+.container-mid-child2
+{
+    width: 15%;
+    height: 103px;
+    margin-left: 0px;
+    position: absolute;
+    display: inline-block;
+
+    background: #D9D9D9;
+    border-radius: 10px;
+}
+
+.container-mid-child3
+{
+    width: 15%;
+    height: 103px;
+    margin-left: 330px;
+    display: inline-block;
+    position: absolute;
+
+    background: #D9D9D9;
+    border-radius: 10px;
+}
+
+.container-mid-right
+{
+    border-radius: 10px;
+    width: 25.5%;
+    height: 389px;
+    margin-left: 74.5%;
+    margin-top: -285px;
+    background: #D9D9D9;
+}
+
+.container-bottom
+{
+    background-color: blue;
+}
