--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 *{margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif;}
+body
+{
+    width: 100%;
+    height: 100%;
+}
 
 .calendarUser, .calendarManager{
     width: 70%;
@@ -91,9 +96,13 @@ input.button
 
 .container-top
 {
+    
+    align-items: center;
     width: 80%;
     height: 114px;
     margin: 22px auto;
+    display: flex;
+    align-items: center;
 
 
     background: #D9D9D9;
@@ -131,7 +140,8 @@ input.button
     height: 103px;
     margin-left: 0px;
     position: absolute;
-    display: inline-block;
+    display: flex;
+    align-items: center;
 
     background: #D9D9D9;
     border-radius: 10px;
@@ -143,6 +153,8 @@ input.button
     height: 103px;
     margin-left: 330px;
     display: inline-block;
+    display: flex;
+    align-items: center;
     position: absolute;
 
     background: #D9D9D9;
@@ -157,4 +169,64 @@ input.button
     margin-left: 74.5%;
     margin-top: -285px;
     background: #D9D9D9;
+    align-items: center;
+}
+
+.btn 
+{
+    background-color: #808080;
+    color: black;
+    width: 169px;
+    height: 65px;
+    border-radius: 10px;
+    border-color: #808080;
+    font-weight: bolder;
+    font-size: 18px;
+}
+
+.btn-1
+{
+    margin-left: 62.5%;
+    margin-right: 2%;
+}
+
+.img-logo
+{
+    margin-left: 66px;
+}
+
+.img-logo-b
+{
+    margin: 60px auto;
+}
+
+a
+{
+    text-decoration: none;
+    color: black;
+}
+
+.container-bottom
+{
+    width: 100%;
+}
+
+.container-bottom-child1 {
+    margin-left: 30%;
+    margin-top: 100px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 40%;
+    height: 60px;
+    background-color: #D9D9D9;
+}
+
+.container-logo
+{
+    margin-left: 39%;
+    width: 386px;
+    height: 240px;
+
+    background: #808080;
+    border-radius: 6px;
 }
