--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -15,91 +15,39 @@ body{
     height: 100%;
 }
 
-.container-top{
-    position: relative;
-    top: 2.5%;
-    width: 80%;
-    height: 12.5%;
-    margin: auto;
-    border-radius: 10px;
-    display: grid;
-    grid-template-columns: 75% 12.5% 12.5%;
-    grid-template-rows: 1;
-    background-color: rgba(128, 128, 128, 0.5);
-    grid-template-areas: 'logo tpCadastrar tpLogar';
-}
-
-.container-top .img-logo
-{
-    width: 10%;
-    height: 100%;
-    grid-area: logo;
-}
-
-.container-top .btn
-{
-    position: relative;
-    display: inline-block;
-    top:20%;
-    left: 10%;
-    width: 80%;
-    height: 50%;
-    margin: 0;
-    background-color: rgb(128, 128, 128);
-    border-color: transparent;
-}
-
-#tpCadastrar
-{
-    grid-area: tpCadastrar;
-}
-
-#tpLogar
-{
-    grid-area: tpLogar; 
-}
-
-.container-mid
-{
-    position: relative;
-    background-color: rgb(128, 128, 128, 0.5);
-    display: grid;
-    grid-template-columns: 50% 50%;
-    top: 8%;
-    height: 70%;
-    margin: 0 10%;
-}
-
-.container-mid-espaco1
-{
-    grid-column: 1;
-    grid-row: span 2;
-}
-
-.container-mid-espaco2
-{
-    grid-column: 2;
-    grid-row: span 2;
-}
-
-.container-bottom{
-    position: fixed;
-    width: 100%;
-    height: 7%;
-    bottom: 0;
+header.mdc-top-app-bar{
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    flex-direction: row;
+    align-items: center;
+    padding: 16px;
+    gap: 33px;
+
+    position: absolute;
+    width: 100%;
+    height: 80px;
+    left: 0px;
+    top: 0px;
+
+    background: #D5D5D5;
 }
 
-.bottom-footer
+.mdc-button.mdc-button--raised
 {
-    background-color: rgb(128, 128, 128, 0.5);
-    width: 50%;
-    height: 100%;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    background: #D5D5D5 !important;
+}
 
+.index-img-container{
+    background: #D5D5D5;
+    position: relative;
+    top: 20%;
+    width: 100%;
+    height: 341px;
+}
+
+.mdc-button.logar
+{
+    margin-right: 10%;
+    margin-left: 5%;
 }
 
 .calendarUser, .calendarManager{
