--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1,7 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Raleway&display=swap');
-
 /* --------------------------------------Main Assets-------------------------------------------------------- */
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Raleway:wght@400;600;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    width: 100%;
+    min-height: 100vh;
+    overflow-x: hidden; 
+}
+
 :root {
     box-sizing: border-box;
 
@@ -28,19 +40,23 @@
     --hfonts: 'Raleway', 'Roboto';
     --pfont: 'Merriweather';
 
+    --h1fsize: 84px;
+    --h2fsize: 60px;
+    --h3fsize: 42px;
+    --h4fsize: 30px;
+    --h5fsize: 15px;
+    --h6fsize: 11px;
+
+    --pfsize: 21px;
+
 }
 
 h1{
     font-family: var(--hfonts);
     font-style: normal;
     font-weight: 700;
-    font-size: 119px;
-    line-height: 144px;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
+    font-size: var(--h1fsize);
+    line-height: 90px;
     letter-spacing: 0.15px;
 
     text-align: center;
@@ -50,14 +66,9 @@ h1{
 h2{
     font-family: var(--hfonts);
     font-style: normal;
-    font-weight: 700;
-    font-size: 84px;
-    line-height: 90px;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
+    font-weight: 600;
+    font-size: var(--h2fsize);
+    line-height: 68px;
     letter-spacing: 0.15px;
 
     text-align: center;
@@ -68,13 +79,8 @@ h3{
     font-family: var(--hfonts);
     font-style: normal;
     font-weight: 700;
-    font-size: 60px;
-    line-height: 68px;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
+    font-size: var(--h3fsize);
+    line-height: 48px;
     letter-spacing: 0.15px;
 
     text-align: center;
@@ -85,15 +91,10 @@ h4{
     font-family: var(--hfonts);
     font-style: normal;
     font-weight: 700;
-    font-size: 42px;
-    line-height: 48px;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
+    font-size: var(--h4fsize);
+    line-height: 35px;
     letter-spacing: 0.15px;
-
+    
     text-align: center;
     color: var(--black);
 }
@@ -102,15 +103,9 @@ h5{
     font-family: var(--hfonts);
     font-style: normal;
     font-weight: 700;
-    font-size: 30px;
-    line-height: 35px;
-    
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
+    font-size: var(--h5fsize);
     letter-spacing: 0.15px;
-    
+
     text-align: center;
     color: var(--black);
 }
@@ -119,12 +114,7 @@ h6{
     font-family: var(--hfonts);
     font-style: normal;
     font-weight: 700;
-    font-size: 15px;
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
+    font-size: var(--h6fsize);
     letter-spacing: 0.15px;
 
     text-align: center;
@@ -135,7 +125,7 @@ p{
     font-family: var(--pfont);
     font-style: normal;
     font-weight: 400;
-    font-size: 21px;
+    font-size: var(--pfsize);
     line-height: 35px;
 
     display: flex;
@@ -145,21 +135,200 @@ p{
     color: var(--black75);
 }
 
+a{  
+    font-family: var(--pfont);
+    font-style: normal;
+    font-weight: 700;
+    font-size: var(--h5fsize);
+    letter-spacing: 0.15px;
+    align-items: center;
+    color: var(--black);
+    text-decoration: none;
+}
+
+label {
+    font-family: var(--hfonts);
+    font-style: normal;
+    font-weight: 700;
+    font-size: var(--h5fsize);
+
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+
+    letter-spacing: 0.15px;
+
+    text-align: center;
+    color: var(--black);
+}
+
+
+
+button, input[type='submit'], input[type="button"], button.btg, input[type='submit'].btg, input[type="button"].btg{
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 36px;
+    
+    border: none;
+    border-radius: 100px;
+    background-image: var(--gradient1);
+    padding: 8px 16px;
+    
+    font-family: var(--hfonts);
+    font-size: var(--h5fsize);
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+button.btm, input[type='submit'].btm, input[type="button"].btm{
+    width: 100px;
+    height: 36px;
+}
+
+button.btp, input[type='submit'].btp, input[type="button"].btp{
+    width: 50px;
+    height: 36px;
+    padding: 4px 8px;
+}
+
+button.bts, input[type='submit'].bts, input[type="button"].bts{
+    border: 1px solid var(--black25);
+    background-color: var(--white);
+    background-image: none;
+    color: var(--terciary);
+}
+
+input[type='radio']{
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+input[type='radio']:after {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: var(--quaternary);
+    content: '';
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid var(--quaternary);
+    cursor: pointer;
+}
+
+input[type='radio']:checked:after {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: var(--primary);
+    content: '';
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid var(--primary);
+    cursor: pointer;
+}
+
+input.checkbox{
+    display: inline-flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.checkbox__input{
+    display: none;
+}
+
+.checkbox__box{
+    width: 1.25em;
+    height: 1.25em;
+    border: 2px solid var(--quaternary);
+    background: var(--quaternary);
+    border-radius: 3px;
+    flex-shrink: 0;
+    transition: background-color 0.15s border-color 0.15s;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+    margin-right: 10px;
+
+}
+
+.checkbox__box::after{
+    content: '\2714';
+    color: var(--quaternary);
+}
+
+.custom-field{
+    position: relative;
+    font-size: var(--h5fsize);
+    padding-top: 20px;
+    margin-bottom: 5px;
+    text-align: left;
+}
+
+.custom-field input {
+    border: none;
+    -webkit-appearance: none;
+    -ms-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: var(--black5);
+    padding: 12px;
+    border-radius: 3px;
+    width: 250px;
+    outline: none;
+    font-size: var(--h5fsize);
+}
+
+.custom-field .placeholder {
+    position: absolute;
+    left: 12px;
+    top: calc(50% + 10px);
+    transform: translateY(-50%);
+    color: var(--black50);
+    transition: 
+    top 0.3s ease,
+    font-size 0.3s ease,
+    color 0.3s ease;
+}
+.custom-field input:valid + .placeholder,
+.custom-field input:focus + .placeholder{
+    top: 10px;
+    font-size: var(--h6fsize);
+    color: var(--primary);
+}
+
+.checkbox__input:checked + .checkbox__box{
+    background-color: var(--primary);
+    border-color: var(--primary);
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--black75);
+    border-radius: 10px;
+}
+
 /* --------------------------------------End of Main Assets-------------------------------------------------- */
-
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body{
-    width: 100%;
-    min-height: 100vh;
-    background-color: grey;
-    overflow-x: hidden; 
-}
 
 .container{
     width: 100%;
@@ -190,13 +359,19 @@ div.logo{
     align-items: center;
 }
 
-.img-logo{
+a.img-logo{
+    grid-column-start: 1;
+    width: 100%;
+    height: 100%;
+}
+
+img.img-logo{
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
 }
 
-div.logo h6{
+div.logo h5{
     padding-left: 9px;
     color: var(--quaternary);
 }
@@ -237,133 +412,85 @@ div.btns a.button-secondary{
     background-color: none;
 }
 
-.button-secondary h6 {
+.button-secondary h5 {
     color: var(--quaternary);
 }
 
 /*FIM HEADER*/
 
 main{
-    background: blue;
     grid-row-start: 2;
     grid-row-end: 3;
     min-height: inherit;
+    display: grid;
+    grid-template-rows: 1fr minmax(250px, 250px) 1181.97px 1232px 220px;
+    grid-template-columns: auto;
 }
 
-main h2.hero{
-    position: absolute;
-    width: 100%;
-    top: 20%;
+div.heroarea{
+    height: 640px;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+    background-image: url(../img/image2.png);
+    background-size:     cover;
+    background-repeat:   no-repeat;
+
+}
+
+div.heroarea h1 {
+    position: relative;
+    top: 18%;
     color: var(--primary);
+}
+
+div.heroarea h4 {
+    position: relative;
+    top: 18%;
+    display: block;
+    color: var(--white);
+}
+
+div.heroarea div.heroradios{
+    position: relative;
+    top: 95%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 25px;
     z-index: 1;
 }
 
-.slider{
-    margin: 0 auto;
-    width: 100vw;
-    height: 520px;
-    overflow: hidden;
-}
-
-.slides{
-    width: 400%;
-    height: 520px;
+div.heroarea div.btcontainer{
+    position: relative;
+    top: 30%;
+    width: 100%;
+    height: 36px;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.slides input {
-    display: none;
-}
-
-.slide{
-    width: 25%;
+div.heroarea button.btg{
     position: relative;
 }
 
-.slide img{
-    width: 100vw;
-}
-
-.manual-navigation{
-    position: absolute;
-    width: 100vw;
-    margin-top: -20px;
-    display: flex;
-    justify-content: center;
-}
-
-.manual-btn{
-    background-color: none;
-    padding: 7.5px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
-}
-
-.manual-btn:not(:last-child){
-    margin-right: 10px;
-}
-
-.manual-btn:hover{
-    background-color: var(--primary);
-}
-
-#radio1:checked ~ .first{
-    margin-left: 0;
-}
-
-#radio2:checked ~ .first{
-    margin-left: -25%;
-}
-
-#radio3:checked ~ .first{
-    margin-left: -50%;
-}
-
-.navigation-auto div {
-    padding: 7.5px;
-    background-color: var(--black75);
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
-}
-
-.navigation-auto{
-    position: absolute;
-    width: 100vw;
-    margin-top: 500px;
-    display: flex;
-    justify-content: center;
-}
-
-.navigation-auto div:not(:last-child){
-    margin-right: 10px;
-}
-
-#radio1:checked ~ .navigation-auto .auto-btn1{
-    background-color: var(--primary);
-}
-
-#radio2:checked ~ .navigation-auto .auto-btn2{
-    background-color: var(--primary);
-}
-
-#radio3:checked ~ .navigation-auto .auto-btn3{
-    background-color: var(--primary);
-}
-
 .qsomos{
+    grid-row-start: 2;
+    grid-row-end: 3;
+
     display: grid;
     grid-template-columns: 10% 1fr 1fr 10%;
     grid-template-rows: auto;
     background: var(--white);
-    width: 100vw;
-    height: 250px;
+    width: 100%;
     align-items: center;
     justify-items: center;
 }
 
-.qsomos h3 {
+.qsomos h2 {
     color: var(--primary);
     grid-column-start: 2;
     grid-column-end: 3;
@@ -376,39 +503,46 @@ main h2.hero{
 }
 
 .nservicos{
-    width: 100vw;
-    height: 982px; 
+    grid-row-start: 3;
+    grid-row-end: 4;
+
+    width: 100%; 
+    height: 100%;
     background-color: var(--white);
     background-image: url(../img/nservicosbg.png);
     background-size:     cover;
     background-repeat:   no-repeat;
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 5% 22% 1fr 1fr;
+    grid-template-rows: 5% 22% 1fr 200px 5%;
     justify-items: center; /* alinha na vertical */
 }
 
-.nservicos h2 {
+.nservicos h1 {
     margin-top: 20px;
     align-items: start;
     grid-row-start: 2;
+    grid-row-end: 3;
     background-image: var(--gradient2);
     background-size: 100%;
     background-clip: text;
+    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
 .nservicos img.nservicosimg{
-    width: 100vw;
+    display: block;
+    width: 100%;
+    height: 100%;
     background-image: url(../img/nservicosbg.png);
     background-size:     cover;
     background-repeat:   no-repeat;
     grid-row-start: 3;
+    grid-row-end: 4;
 }
 
 .nservicos div.servicos{
     grid-row-start: 4;
-    height: 200px;
     width: 100vw;
 
     display: grid;
@@ -423,20 +557,198 @@ div.servicos #servico1{
     grid-column-end: 3;
 }
 
+
+
 div.servicos #servico1 p, div.servicos #servico2 p, div.servicos #servico3 p, div.servicos #servico4 p{
     grid-row-start: 3;
+    text-align: center;
 }
 
 .servicosgrid{
     padding-top: 30px;
     display: grid;
     justify-items: center;
+    align-items: center;
     grid-template-columns: auto;
     grid-template-rows: 96px 15px 50px;
 }
 
+
 .nprofissionais{
-    width: 100vw;
-    height: 250px;
+    grid-row-start: 4;
+    grid-row-end: 5;
+
     background-color: var(--white);
+
+    display: grid;
+    grid-template-rows: 39.15% 1fr;
+    grid-template-columns: auto;
+
+}
+
+.nprofissionais div.main{
+    width: 100%;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: auto;
+
+}
+
+.nprofissionais div.main h2{
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+    display: block;
+    text-align: right;
+    color: var(--primary);
+    padding-right: 42px;
+}
+
+.nprofissionais div.main div.mainC3{
+    grid-row-start: 3;
+    grid-row-end: 4;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    justify-items: center;
+}
+
+.nprofissionais div.main div.mainC3 h4{
+    grid-row-start: 2;
+    grid-row-end: 3;
+
+    display: block;
+    text-align: center;
+    color: var(--terciary);
+}
+
+.nprofissionais div.main div.profissionais{
+    width: 100%;
+    height: 100%;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 5fr 1fr 1fr 5fr 1fr 1fr 5fr 1fr;
+    grid-template-rows: auto;
+
+}
+
+div.profissionais div#p1, div.profissionais div#p2, div.profissionais div#p3 {
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    grid-template-columns: minmax(100px, 1fr) 3fr;
+    grid-template-rows: auto;
+}
+
+div.profissionais div#p1 div#p1info, div.profissionais div#p2 div#p2info, div.profissionais div#p3 div#p3info {
+    width: 100%;
+    height: 100%;
+    /*background-color: blue;*/
+
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: auto;
+
+}
+
+div#p1info h4, div#p2info h4, div#p3info h4{
+    display: block;
+    grid-row-start: 2;
+}
+
+div#p1info img, div#p2info img, div#p3info img {
+    justify-self:center;
+    grid-row-start: 3;
+}
+
+.nprofissionais div.main div.profissionais #p1{
+    grid-column-start: 2;
+    grid-column-end: 4;
+    /* background-color: red; */
+}
+.nprofissionais div.main div.profissionais #p2{
+    grid-column-start: 5;
+    grid-column-end: 7;
+    /* background-color: red; */
+}
+
+.nprofissionais div.main div.profissionais #p3{
+    grid-column-start: 8;
+    grid-column-end: 10;
+    /* background-color: red; */
+}
+
+
+.nprofissionais div.main div.mainC3 hr.rounded{
+    grid-row-start: 3;
+    grid-row-end: 4;
+
+    width: 562px;
+    height: 3px;
+    background-color: var(--primary);
+    border: 0;
+    border-top: 2px solid var(--primary);
+    border-radius: 5px;
+
+}
+
+div.nprofissionaisimg  {
+    width: 100%;
+    height: 100%;
+
+    background-size: cover; /* <-- background size */
+    background-position: center;
+
+    background-image: url(../img/nprofissionaisimg.png);
+
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+div.footer{
+    grid-row-start: 5;
+    grid-row-end: 6;
+
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 0.5fr;
+    grid-template-columns: auto;
+    background-color: var(--terciary);
+}
+
+div.footer h4 {
+    grid-row-start: 2;
+
+    display: block;
+    background-image: var(--gradient1);
+    background-size: 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+}
+
+div.footer div.contato {
+    grid-row-start: 4;
+    
+    display: grid;
+    grid-template-columns: 10% minmax(280px, 2fr) 1fr minmax(280px, 2fr) 1fr minmax(280px, 2fr) 10%;
+    grid-template-rows: auto;
+    align-items: center;
+}
+
+div.contato img#c1{
+    justify-self: center;
+    grid-column-start: 2; 
+}
+
+div.contato img#c2{
+    justify-self: center;
+    grid-column-start: 4; 
+}
+
+div.contato img#c3{
+    justify-self: center;
+    grid-column-start: 6; 
 }
