Navbar implemented and FullCalendar css changes

--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -9,6 +9,8 @@
     font-family: var(--pfont);
 }
 
+html {font-size: 131.3%;} /*21px*/
+
 body{
     width: 100%;
     min-height: 100vh;
@@ -30,7 +32,10 @@ body{
     --terciary75: rgba(23, 68, 41, 0.75);
     --terciary50: rgba(23, 68, 41, 0.50);
     --quaternary: #CAEED0;
+    --quaternary50: rgba(202, 238, 208, 0.50);
     --error: #d93025; /* old error color #C9E339 */
+    --starFilled: #FF8A00;
+    --starEmpty: #E7DCD0;
     
     --white: #ffffff;
 
@@ -49,14 +54,14 @@ body{
     --hfonts: 'Raleway', 'Roboto';
     --pfont: 'Merriweather';
 
-    --h1fsize: 84px;
-    --h2fsize: 60px;
-    --h3fsize: 42px;
-    --h4fsize: 30px;
-    --h5fsize: 15px;
-    --h6fsize: 11px;
-
-    --pfsize: 21px;
+    --h1fsize: 3.998rem;  /*83.95px*/
+    --h2fsize: 2.827rem;  /*59.37px*/
+    --h3fsize: 1.999rem;  /*41.99px*/
+    --h4fsize: 1.414rem;  /*29.69px*/
+    --h5fsize: 0.715rem;  /*14.85px*/
+    --h6fsize: 0.53rem;   /*11.13px*/
+                          
+    --pfsize: 1rem;       /*21.00px*/
 
 }
 
@@ -819,13 +824,207 @@ main.loginPage{
 
 /* -----------------------------------------------LOGIN END------------------------------------------------- */
 
+header h4
+{
+    color: var(--white);
+    width: 100%;
+}
 
 main.logado {
-    grid-template-columns: 25% 1fr;
+    grid-template-columns: minmax(225px, 18%) 1fr;
     grid-template-rows: auto;
     height: 90vh;
 }
 
 .logado div.navbar {
-    background-color: #14C530;
+    background-color: var(--white);
+}
+
+
+div.navbar div.userInfo {
+    display: grid;
+    padding: 5px 5px;
+    grid-template-columns: 1fr;
+    grid-template-rows: minmax(auto, 88px) 1fr 0.25fr;
+    justify-items: center;
+    align-items: center;
+}
+
+div.navbar div.userInfo img#img-user{
+    max-width: 88px;
+    max-height: 88px;
+    display: inline;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid var(--black25);
+}
+
+div.navbar div.userInfo i{
+    color: var(--starFilled);
+
+}
+
+div.navbar div.divider{
+    background-color: var(--black5);
+    width: 100%;
+    height: 2px;
+}
+
+div.navbar div.options{
+    padding: 15px 0;
+    display: grid;
+    height: 71%;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: auto;
+}
+
+div.navbar div.options a:last-child{
+    grid-row-start: 8;
+    grid-row-end: 9;
+}
+
+div.navbar div.options a {
+    color: var(--black);
+    font-size: inherit;
+}
+
+div.navbar div.options a:hover{
+    background-color: var(--quaternary50);
+}
+
+div.navbar div.options a:hover i, div.navbar div.options a:hover h5{
+    color: var(--primary);
+}
+
+div.navbar div.options div.item{
+    width: fit-content;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 21px 1fr;
+    padding-left: 18px;
+    align-items: center;
+}
+
+div.navbar div.options div.item h5{
+    width: 100%;
+    padding-left: 30px;
+    text-align: left;
+}
+
+.logado div.conteudo {
+    background-color: gray;
+}
+
+.fc-header-toolbar.fc-toolbar 
+{
+    align-self: center;
+}
+
+.calendarManager,  
+.calendarUser{
+    justify-items: center;
+    align-items: center;
+}
+
+.calendarManager .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:first-child .fc-button-group button, 
+.calendarUser .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:first-child .fc-button-group button
+{
+    width: 50px;
+    height: 25px;
+    padding: 0;
+    background-color: var(--black);
+    font-size: 12px;
+    border-radius: 100px;
+    margin-right: 5px;
+}
+
+.calendarManager .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(2) h2, 
+.calendarUser .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(2) h2 {
+    width: 200px;   
+}
+
+.calendarManager .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3), 
+.calendarUser .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3)  {
+    width: 250px;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 5px;
+}
+
+.calendarManager .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) .fc-button-group:nth-child(1), 
+.calendarUser .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) .fc-button-group:nth-child(1){
+    grid-column-start: 1;
+    grid-column-end: 2;
+
+}
+
+.calendarManager .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) .fc-button-group:nth-child(2),
+.calendarUser .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) .fc-button-group:nth-child(2)
+{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    margin: 0;
+}
+
+.calendarManager .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) button:last-child,
+.calendarUser .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) button:last-child
+ {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    margin: 0;
+}
+
+.calendarManager .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) .fc-button-group button:last-child,
+.calendarUser .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) .fc-button-group button:last-child
+{
+    display: none;
+}
+
+.calendarManager .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) .fc-button-group button, .calendarManager .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) button,
+.calendarUser .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) .fc-button-group button, .calendarUser .fc-header-toolbar.fc-toolbar  .fc-toolbar-chunk:nth-child(3) button
+{
+    width: 65px;
+    height: 25px;
+    font-family: var(--hfonts);
+    font-size: 12px;
+    border-radius: 100px;
+    padding: 0;
+    background-color: var(--black);
+    align-items: center;
+    justify-items: center;
+}
+
+.calendarManager div.fc-header-toolbar.fc-toolbar  div.fc-toolbar-chunk h2.fc-toolbar-title,
+.calendarUser div.fc-header-toolbar.fc-toolbar  div.fc-toolbar-chunk h2.fc-toolbar-title
+{
+    font-family: var(--hfonts);
+    font-size: var(--h5fsize) !important;
+    
+}
+
+.calendarManager .fc-view-harness.fc-view-harness-active,
+.calendarUser .fc-view-harness.fc-view-harness-active{
+    width: 45.5%;
+    background-color: var(--black75);
+}
+
+div.fc-scrollgrid-sync-inner a.fc-col-header-cell-cushion {
+    color: var(--white) !important;
+}
+
+div.fc-daygrid-day-top a {
+    color: var(--white) !important;
+}
+
+div.fc-timegrid-slot-label-cushion.fc-scrollgrid-shrink-cushion{
+    color: var(--white);
+}
+
+.calendarManager .fc-view-harness.fc-view-harness-active tbody a.fc-daygrid-event.fc-daygrid-dot-event.fc-event,
+.calendarUser .fc-view-harness.fc-view-harness-active tbody a.fc-daygrid-event.fc-daygrid-dot-event.fc-event{
+    font-size: var(--h6fsize);
+    color: var(--white) !important;
 }
