--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -245,6 +245,16 @@ button.bts, input[type='submit'].bts, input[type="button"].bts{
     color: var(--terciary);
 }
 
+button.btxg, input[type='submit'].btxg, input[type="button"].btxg
+{
+    width: 250px;
+}
+
+select 
+{
+    width: 250px !important;
+}
+
 input[type='radio']{
     margin-left: 10px;
     margin-right: 10px;
@@ -1236,31 +1246,46 @@ div.navbar div.options div.item h5{
 main.logadoPage div.conteudo.realizarOrcamento {
     display: grid;
     grid-template-columns: 1;
-    grid-template-rows: 10% 1fr 10% ;
+    grid-template-rows: 10% 1fr 10%;
     
 }
-main.logadoPage div.conteudo div.space80{
+
+main.logadoPage div.conteudo.realizarOrcamento  div.space80{
     grid-row-start: 2;
     grid-row-end: 3;
-    background-color: red;
     display: grid;
     grid-template-columns: 10% 80% 10%;
+    grid-template-rows: auto;
     justify-content: center;/*centralizou na vertical*/
     align-items: center; /* centralizou na horizontal*/
 }
-div.space80 div.containerform{
-    background-color: grey;
-    height: 100%;
+div.space80 form.containerform{
     grid-column-start: 2;
     grid-column-end: 3;
-    
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 20% 1fr;    
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 5% 1fr;    
+    justify-content: center;
 }
-div.containerform input:last-child{
+
+
+div.space80 form.containerform input:last-child
+{
     grid-row-start: 7;
     grid-row-end: 8;
+}
+
+form.containerform div.formGroup.flex.flex-col.my-4
+{
+    justify-content: center; /*alinha na vertical*/
+    align-items: center; /*alinha na horizontal*/
+}
+
+form.containerform div.formGroup.flex.flex-col.my-4 label
+{
+    width: 100%;
 }
 
 /* -----------------------------------------------ORÇAMENTO END------------------------------------------------- *
