--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1288,4 +1288,4 @@ form.containerform div.formGroup.flex.flex-col.my-4 label
     width: 100%;
 }
 
-/* -----------------------------------------------ORÇAMENTO END------------------------------------------------- *
+/* -----------------------------------------------ORÇAMENTO END------------------------------------------------- */
